--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
-baseurl = "https://oayul.github.io/"
 languageCode = "en-us"
+relativeURLs = true
 title = "Computer	Vision	for	Microscopy	Image	Analysis (CVMI)"
 MetaDataFormat = "yaml"
 
